@@ -27,6 +27,7 @@ placeholder.tag: '%s'
 placeholder.displayname: '%s'
 placeholder.inteam: 'true'
 placeholder.notinteam: 'false'
+placeholder.noTitle: ''
 prefix.owner: ' **'
 prefix.admin: ' *'
 prefix.default: ' '
